[package]
name = "mazes"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# TODO - Remove dynamic_linking before release.
# https://bevyengine.org/learn/quick-start/getting-started/setup/#dynamic-linking
bevy = { version = "0.15", features = ["dynamic_linking"] }
